# Small-LLaMA

./: .env.example  .gitignore  README.md  example_commands.ps1  pyproject.toml
book_llm/: api.py  chunking.py  cli.py  config.py  ingest.py  llm.py  pdf_reader.py  rag.py  vector_store.py
book_llm_novv1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
