[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-llm-novv1"
version = "0.1.0"
description = "BOOK LLM novv1 - small local book Q&A + summarizer (RAG)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pypdf>=4.2.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "sentence-transformers>=3.0.1",
  "numpy>=1.26.4",
  "requests>=2.32.3",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.1",
]

[project.optional-dependencies]
llama_cpp = ["llama-cpp-python>=0.2.86"]

[project.scripts]
book-llm = "book_llm.cli:app"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["book_llm*"]
exclude = ["Book*"]

[tool.ruff]
line-length = 100
